fix minor bugs in login and fix contrast issues

--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,7 @@ button.primary,
 .button.primary {
   background-color: var(--custom-color-brand);
   border: 1px solid var(--custom-color-brand);
+  color: black
 }
 
 /* Widgets */
